# csopesy-mco1

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md  compile_commands.json  config.txt  csopesy-log.txt  mco1
.cache/clangd/index/: main.cpp.511FB18766EB9024.idx
demos/: scheduler_demo.cpp
docs/: 2026-05-26-CSOPESY-mco1-code-reference.md  2026-05-26-CSOPESY-mco1-group-plan.md  2026-05-26-scheduling-code-review-report.md  2026-05-28-code-review-tracks-1-3.md  2026-06-16-prof-consultation-notes.md  2026-06-24-code-review-docx-spec.md  MO1 - OS Emulator - Process Scheduler.docx  task1_3_edge_cases_and_tests.md
docs/superpowers/plans/: 2026-05-28-scheduler-hardening.md  2026-06-22-fix-ticksleeping-rebuild-lock.md  2026-06-24-track1-q3-fixes.md
docs/superpowers/specs/: 2026-05-26-track1-scheduler-design.md
include/cli/: Console.h  Demo.h  Reporter.h  ScreenManager.h
include/process/: Instructions.h  Process.h
include/scheduler/: CPU.h  IProcess.h  Scheduler.h  SchedulerEngine.h  SchedulingPolicy.h
src/: CPU.cpp  CPU.h  Config.cpp  Config.h  Console.cpp  Console.h  Demo.cpp  Scheduler.cpp  Scheduler.h  SchedulerEngine.cpp  SchedulerEngine.h  SchedulingPolicy.cpp  main.cpp
src/cli/: Console.cpp  Demo.cpp  Reporter.cpp  ScreenManager.cpp
src/config/: Config.cpp
src/process/: Instructions.cpp  Process.cpp
src/scheduler/: CPU.cpp  Scheduler.cpp  SchedulerEngine.cpp  SchedulingPolicy.cpp
tests/: MockProcess.cpp  MockProcess.h  test_config.cpp  test_console.cpp  test_engine.cpp  test_policy.cpp  test_process.cpp  test_scheduler.cpp
tests/fixtures/: config_bad_range.txt  config_missing_key.txt  config_valid.txt
